--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,18 +1,10 @@
-{% load staticfiles i18n %}
+{% load staticfiles %}
 
-<footer class="footer-container">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-6 col-sm-6">
-                <div class="footer-left">
-                    <span>&copy; 2016 <a href="http://themeforest.net/user/westilian">westilian</a></span>
-                </div>
-            </div>
-            <div class="col-md-6 col-sm-6">
-                <div class="footer-right">
-                    <span class="footer-meta">Crafted with&nbsp;<i class="fa fa-heart"></i>&nbsp;by&nbsp;<a href="http://themeforest.net/user/westilian">westilian</a></span>
-                </div>
-            </div>
-        </div>
-    </div>
+<footer class="footer">
+    <span class="text-left">
+        <a href="http://coreui.io">BioCU</a> © 2017. All Rights Reserved.
+    </span>
+    <span class="float-xs-right">
+        Powered by <a href="http://coreui.io">Computer Engineering, Chulalongkorn University</a>
+    </span>
 </footer>
