create de novo form

--- a/templates/de_novo/index.html
+++ b/templates/de_novo/index.html
@@ -4,7 +4,6 @@
 {% block breadcrumb %}
     <ol class="breadcrumb">
         <li class="breadcrumb-item">De Novo</li>
-{#        <li class="breadcrumb-item"><a href="#">Admin</a></li>#}
 {#        <li class="breadcrumb-item active">Dashboard</li>#}
 
         <li class="breadcrumb-menu">
@@ -17,36 +16,48 @@
 
 {% block main-container %}
     <div class="card">
-        <div class="card-header"><strong>De Novo Input Form</strong></div>
-        <div class="card-block">
-            <form action="" method="post" enctype="multipart/form-data" class="form-horizontal ">
-                {# ....... #}
-{#                <div class="form-group row">#}
-{#                    <label class="col-md-3 form-control-label" for="file-input">File input</label>#}
-{#                    <div class="col-md-9">#}
-{#                        <input type="file" id="file-input" name="file-input">#}
-{#                    </div>#}
-{#                </div>#}
-                {# Children file #}
+        <form action="{{ action }}" method="post">
+            {% csrf_token %}
+            <div class="card-header"><strong>De Novo Input Form</strong></div>
+{#            {{ form }}#}
+
+            <div class="card-block">
+                <div class="form-group row">
+                    <label class="col-md-3 form-control-label" for="file-input">{{ form.children.label }}</label>
+                    <div class="col-md-9">
+                        <input type="file" id="file-input" name="file-input">
+                    </div>
+                </div>
+{#                 Children files#}
                 <div class="form-group row">
                     <label class="col-md-3 form-control-label" for="file-multiple-input">Children files</label>
                     <div class="col-md-9">
-                        <input type="file" id="file-multiple-input" name="file-multiple-input" multiple="">
+                        <input type="file" id="children-files" name="children-files" multiple="">
                     </div>
                 </div>
-                {# Output file name #}
+{#                 Parent files#}
+                <div class="form-group row">
+                    <label class="col-md-3 form-control-label" for="file-multiple-input">Parent files</label>
+                    <div class="col-md-9">
+                        <input type="file" id="parent-files" name="parent-files" multiple="">
+                    </div>
+                </div>
+{#                 Output file name#}
                 <div class="form-group row">
                     <label class="col-md-3 form-control-label" for="text-input">Output file name</label>
                     <div class="col-md-9">
-                        <input type="text" id="text-input" name="text-input" class="form-control" placeholder="Text">
-{#                        <span class="help-block">This is a help text</span>#}
+                        <input type="text" id="output-name" name="output-name" class="form-control" placeholder="Text">
+                        <span class="help-block">This is a help text</span>
                     </div>
                 </div>
-            </form>
-        </div>
-        <div class="card-footer">
-            <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Submit</button>
-            <button type="reset" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Reset</button>
-        </div>
+            </div>
+
+            <div class="card-footer">
+                <button type="submit" class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> Submit</button>
+                <button type="reset" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Reset</button>
+            </div>
+        </form>
+
+
     </div>
 {% endblock %}
