--- a/templates/base.html
+++ b/templates/base.html
@@ -61,6 +61,8 @@
     <!-- Plugins and scripts required by this views -->
     <!-- Custom scripts required by this view -->
     <script src="{% static 'js/views/main.js' %}"></script>
+
+    {% block my-script %}{% endblock %}
 </body>
 
 </html>
