add phenotype to sidebar

--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -6,6 +6,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'de_novo:index' %}"><i class="icon-chemistry"></i> De Novo </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'phenotype:index' %}"><i class="icon-chemistry"></i> Phenotype Influencing </a>
+            </li>
         </ul>
     </nav>
 </div>
