--- a/templates/de_novo/index.html
+++ b/templates/de_novo/index.html
@@ -3,9 +3,7 @@
 
 {% block breadcrumb %}
     <ol class="breadcrumb">
-        <li class="breadcrumb-item">De Novo</li>
-{#        <li class="breadcrumb-item active">Dashboard</li>#}
-
+        <li class="breadcrumb-item active">De Novo Mutation</li>
         <li class="breadcrumb-menu">
             <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
                 <a class="btn btn-secondary" href="#"><i class="icon-settings"></i> &nbsp;Settings</a>
