--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -9,6 +9,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'phenotype:index' %}"><i class="icon-chemistry"></i> Phenotype Influencing </a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'combine_gvcf:index' %}"><i class="icon-chemistry"></i> Combine GVCF </a>
+            </li>
         </ul>
     </nav>
 </div>
