--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,7 @@
     <link href="{% static 'css/simple-line-icons.css' %}" rel="stylesheet">
     <!-- Main styles for this application -->
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link href="{% static 'css/bioinformatics.css' %}" rel="stylesheet">
 </head>
 
 <!-- BODY options, add following classes to body to change options
