--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -6,8 +6,17 @@
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'de_novo:index' %}"><i class="icon-chemistry"></i> De Novo </a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'phenotype:index' %}"><i class="icon-chemistry"></i> Phenotype Influencing </a>
+
+            <li class="nav-item nav-dropdown">
+                <a class="nav-link nav-dropdown-toggle" href="#"><i class="icon-puzzle"></i> Exomizer</a>
+                <ul class="nav-dropdown-items">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'phenotype:index' %}"><i class="icon-chemistry"></i> hiPhive </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'exomewalker:index' %}"><i class="icon-chemistry"></i> ExomeWalker </a>
+                    </li>
+                </ul>
             </li>
         </ul>
     </nav>
