implement search hiphive **submit button bug

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,28 +19,18 @@
     <meta name="keyword" content="Bootstrap,Admin,Template,Open,Source,AngularJS,Angular,Angular2,jQuery,CSS,HTML,RWD,Dashboard">
     <link rel="shortcut icon" href="{% static 'img/favicon.png' %}">
     <title>Bioinformatics</title>
-    <!-- Icons -->
+
     <link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/simple-line-icons.css' %}" rel="stylesheet">
-    <!-- Main styles for this application -->
+
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
     <link href="{% static 'css/bioinformatics.css' %}" rel="stylesheet">
 </head>
 
-<!-- BODY options, add following classes to body to change options
-		1. 'compact-nav'     	  - Switch sidebar to minified version (width 50px)
-		2. 'sidebar-nav'		  - Navigation on the left
-			2.1. 'sidebar-off-canvas'	- Off-Canvas
-				2.1.1 'sidebar-off-canvas-push'	- Off-Canvas which move content
-				2.1.2 'sidebar-off-canvas-with-shadow'	- Add shadow to body elements
-		3. 'fixed-nav'			  - Fixed navigation
-		4. 'navbar-fixed'		  - Fixed navbar
-		5. 'footer-fixed'		  - Fixed navbar
-	-->
 <body class="navbar-fixed sidebar-nav fixed-nav">
     {% include 'partials/header.html' %}
     {% include 'partials/sidebar.html' %}
-    <!-- Main content -->
+
     <main class="main">
         {% block breadcrumb %}{% endblock %}
         <div class="container-fluid">
@@ -48,7 +38,6 @@
                 {% block main-container %}{% endblock %}
             </div>
         </div>
-        <!-- /.conainer-fluid -->
     </main>
     {% include 'partials/footer.html' %}
 
@@ -63,6 +52,7 @@
     <!-- Custom scripts required by this view -->
     <script src="{% static 'js/views/main.js' %}"></script>
 
+{#    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>#}
     {% block my-script %}{% endblock %}
 </body>
 
