--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -11,7 +11,7 @@
                 <a class="nav-link nav-dropdown-toggle" href="#"><i class="icon-puzzle"></i> Exomizer</a>
                 <ul class="nav-dropdown-items">
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'phenotype:index' %}"><i class="icon-chemistry"></i> hiPhive </a>
+                        <a class="nav-link" href="{% url 'hiphive:index' %}"><i class="icon-chemistry"></i> hiPhive </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'exomewalker:index' %}"><i class="icon-chemistry"></i> ExomeWalker </a>
