--- a/templates/hiphive/index.html
+++ b/templates/hiphive/index.html
@@ -27,14 +27,14 @@
                         </div>
                     </div>
 
-                    <div style="display: none">{% include 'snippets/normal_field.html' with element=form.input %}</div>
+                    <div>{% include 'snippets/normal_field.html' with element=form.input %}</div>
                     {% include 'snippets/normal_field.html' with element=form.hpo %}
                     {% include 'snippets/normal_field.html' with element=form.output_name %}
                     {{ form.non_field_errors }}
                 </div>
 
                 <div class="card-footer">
-                    <button type="submit" class="btn btn-sm btn-primary" id="submit"><i class="fa fa-dot-circle-o"></i> Submit</button>
+                    <button type="submit" name="hiphive" class="btn btn-sm btn-primary" id="submit"><i class="fa fa-dot-circle-o"></i> Submit</button>
                 </div>
             </form>
         </div>
@@ -48,9 +48,11 @@
                     {% include 'snippets/normal_field_non_inline.html' with element=search_form.search_string %}
                     <button type="submit" name="search" class="btn btn-sm btn-secondary" id="search">Search</button>
                     {% if search_results %}
-                        <div style="height: 300px; overflow-y: auto; margin-top: 20px;">
+                        <div style="max-height: 300px; overflow-y: auto; margin-top: 20px;">
                             {% for search_result in search_results %}
-                                <button class="btn btn-sm btn-primary col-lg-12" id="{{ search_result.0 }}">
+                                <button type="button" class="btn btn-sm btn-primary col-lg-12"
+                                        id="{{ search_result.0 }}" ondblclick="selectID(id)"
+                                        style="text-align:left; padding-left:6px">
                                     {{ search_result.0 }} - {{ search_result.1 }}
                                 </button>
                             {% endfor %}
@@ -64,17 +66,19 @@
 
 {% block my-script %}
     <script type="text/javascript">
-        document.getElementById("submit").onclick = function () {
-{#            alert("submit");#}
-            document.getElementById("id_input").value = document.getElementById("input-file").value;
-        };
-{#        $(document).ready(function(){#}
-{#            $("#submit").on("click", function(){#}
-{#                event.preventDefault();#}
-{#                alert("submit naaa");#}
-{#                $("#id_input").val($("#input-file").val());#}
-{#                alert($("#input-file").val())#}
-{#            });#}
-{#        });#}
+        $(document).ready(function(){
+            $("#submit").on("click", function(){
+                event.preventDefault();
+                $("#id_hiphive-input").val($("#input-file").val());
+            });
+        });
+
+        function selectID(id) {
+            $(id).hide();
+            var  hpoInput = $("#id_hiphive-hpo");
+            var existID = hpoInput.val();
+            if(existID == "") hpoInput.val(id);
+            else if(existID.indexOf(id) < 0) hpoInput.val(existID+", "+id);
+        }
     </script>
 {% endblock %}
