import junior-sama's function

--- a/templates/exomewalker/index.html
+++ b/templates/exomewalker/index.html
@@ -28,7 +28,7 @@
                         </div>
                     </div>
 
-                    <div>{% include 'snippets/normal_field.html' with element=form.input %}</div>
+                    <div style="display: none">{% include 'snippets/normal_field.html' with element=form.input %}</div>
                     {% include 'snippets/normal_field.html' with element=form.entrez %}
                     {% include 'snippets/normal_field.html' with element=form.output_name %}
 
