--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -3,6 +3,11 @@
 <div class="sidebar">
     <nav class="sidebar-nav">
         <ul class="nav">
+
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'filter:index' %}"><i class="icon-chemistry"></i> Filter </a>
+            </li>
+
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'de_novo:index' %}"><i class="icon-chemistry"></i> De Novo </a>
             </li>
@@ -18,9 +23,11 @@
                     </li>
                 </ul>
             </li>
+
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'combine_gvcf:index' %}"><i class="icon-chemistry"></i> Combine GVCF </a>
             </li>
+
         </ul>
     </nav>
 </div>
