edit entrez output

--- a/templates/exomewalker/index.html
+++ b/templates/exomewalker/index.html
@@ -76,7 +76,8 @@
                                 'class="btn btn-sm btn-primary col-lg-12 search_result_btn"' +
                                 'id=' + search_results[i][0] + ' ondblclick="selectID(id)"' +
                                 'style="text-align:left; padding-left:6px">' +
-                                search_results[i][0] + ' - ' + search_results[i][1] + '</button>';
+                                search_results[i][0] + ' - ' + search_results[i][1] +
+                                ': ' + search_results[i][2] + '</button>';
                             $('#search_results').append(btn);
                         }
                     }
